cabal-version:      3.0
name:               s3m-player
version:            0.1.0.0
synopsis:           A simple s3m player written in Haskell

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Jorge L. Martin
maintainer:         jormg82@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable s3m-player
    main-is: Main.hs

    --ghc-options: -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-unused-top-binds -Wno-orphans
    --ghc-options: -Wall

    -- Modules included in this executable, other than Main.
    other-modules: Header,
                   Loader,
                   Params,
                   Player,
                   HeaderReport

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    array,
                      base,
                      binary,
                      bytestring,
                      colonnade,
                      containers,
                      fmt,
                      monad-loops,
                      optparse-applicative,
                      text,
                      transformers
    hs-source-dirs:   src
    default-language: Haskell2010
